--- a/package.json
+++ b/package.json
@@ -12,18 +12,29 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/jest": "^29.5.12",
+    "@types/supertest": "^6.0.2",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.2.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
+    "ts-node-dev": "^2.0.0"
   },
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
