--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./dist/server.js",
     "build": "tsc",
     "dev": "nodemon server.ts",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
@@ -21,6 +22,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
+    "sqlite3": "^5.1.7",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.2",
     "ts-node-dev": "^2.0.0"
