--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
@@ -30,10 +32,12 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.12",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
