--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist"
   },
-  "include": ["*.ts", "**/*.ts", "use-cases/clients/__tests__/createClient.test.ts"],
+  "include": ["*.ts", "**/*.ts"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
